@@ -4,6 +4,13 @@ Changelog
 2.0.1 (2011-04-22)
 ------------------
 
+- Add links to delete/approve a comment in the moderator notification email.
+  [timo]
+
+- Remove the unnecessary workflow_action parameter from the PublishComments 
+  request.
+  [timo]
+
 - Make sure the email settings in the control panel are disabled when commenting
   is disabled globally.
   [timo]
